# AcVim

./: .gitignore  .gitmodules  README  README.md  _vimrc  setup.bat  setup.sh  tools.rar
vimfiles/: Ac.vimrc
vimfiles/bundle/.neobundle/: install_info  tags_info
vimfiles/bundle/MapFinder/doc/: MapFinder.txt
vimfiles/bundle/MapFinder/plugin/: MapFinder.vim
vimfiles/bundle/doc-zh_Cn/doc/: vimcdoc-uninst.rar
vimfiles/bundle/txtbrowser/syntax/: txt.rar
vimfiles/bundle/vim-filesearch/doc/: tags
vimfiles/bundle_custom/.neobundle/: install_info
vimfiles/bundle_custom/acp/: README.md
vimfiles/bundle_custom/acp/autoload/: acp.vim
vimfiles/bundle_custom/acp/doc/: tags
vimfiles/bundle_custom/acp/ftplugin/: css.vim  go.vim  html.vim  nim.vim  perl.vim  python.vim  ruby.vim  xml.vim  zig.vim
vimfiles/bundle_custom/acp/plugin/: acp.vim
vimfiles/bundle_custom/auto-pairs/: README.md
vimfiles/bundle_custom/auto-pairs/doc/: AutoPairs.txt
vimfiles/bundle_custom/auto-pairs/plugin/: auto-pairs.vim
vimfiles/bundle_custom/clever-f.vim/plugin/: clever-f.vim
vimfiles/bundle_custom/hare.vim/: COPYING  README.md
vimfiles/bundle_custom/hare.vim/compiler/: hare.vim
vimfiles/bundle_custom/hare.vim/doc/: hare.txt  tags
vimfiles/bundle_custom/hare.vim/ftdetect/: hare.vim
vimfiles/bundle_custom/hare.vim/ftplugin/: hare.vim
vimfiles/bundle_custom/hare.vim/indent/: hare.vim
vimfiles/bundle_custom/hare.vim/syntax/: hare.vim
vimfiles/bundle_custom/nim.vim/compiler/: nim.vim
vimfiles/bundle_custom/nim.vim/ftplugin/: nim.vim
vimfiles/bundle_custom/nim.vim/indent/: nim.vim
vimfiles/bundle_custom/nim.vim/syntax/: nim.vim
vimfiles/conf/: Ac.vimrc  autocomplete.vconf  autocomplete.vimrc  plugins.vimrc  user.vconf  user.vimrc  vim9script.vimrc
vimfiles/dict/: adept.ctags  as3.dict  bash.dict  c.dict  c2.base.dict  c2.ctags  c2.tags  cpp.dict  cpptags  dither.ctags  flecs.dict  flecs.tags  flecstags  gl.dict  hare.base.dict  hare.ctags  hare.dict  hare.sdl.dict  hare.sdl.tags  hare.tags  haskell.dict  html.dict  html5.dict  java.dict  javascript.dict  js.dict  lua.dict  mfc.dict  nature.ctags  naytags  nico.dict  nicotags  nim.base.dict  nim.ctags  nim.dict  nim.tags  nim2.dict  nim_enums.dict  nimtags  ocaml.dict  (+44 more)
vimfiles/miniSnips/all/: path.snip
vimfiles/miniSnips/c/: cfile.snip  hello.snip  incl.snip  newfile.snip  tstruct.snip
vimfiles/miniSnips/cpp/: cl.snip
vimfiles/miniSnips/nim/: ass.snip  case.snip  cast.snip  forit.snip  if.snip  prag.snip  proc.snip  ptr_autions.snip  tcase.snip  tobj.snip  tobjs.snip
vimfiles/miniSnips/vim/: plugin.snip
vimfiles/plugin/: AddCppClass_Plus.vim  LiteTabPage.vim  TableHelper.vim  a.vim  bufexplorer.vim  calendar.vim  ccvext.vim  code_complete.vim  echofunc.vim  errormarker.vim  fFtT.vim  hexman.vim  load_template.vim  parameter_objects.vim  qbuf.vim  showmarks.vim  sketch.vim  taglist.vim
vimfiles/plugins/ColorV_2.5.3/doc/: tags
vimfiles/plugins/FlipLRr/: README
vimfiles/plugins/FlipLRr/plugin/: fliplr.vim
vimfiles/plugins/Lite-Tab-Page/: README
vimfiles/snippets/: axe.snippets  c.snippets  c2.snippets  cpp.snippets  rust.snippets  vhdl.snippets  virgil.snippets
vimfiles/syntax/: adept.vim  c.vim  cpp.vim  d.vim  litac.vim  nim.vim  pawn.vim  txt.rar
vimfiles/tasks/: config.tasks  nim.tasks
vimfiles/template/axe/: Makefile  __booststrap.sh  __build.sh  __update.sh
vimfiles/template/cpp/: opengl.cpp
vimfiles/template/dither/: buildc.sh
vimfiles/template/github/: README.md
vimfiles/template/make/: all.mk  allegro5.mk  axe.mk  exe.make  exe.mk  makefile.mk  makefile2.mk  minshell.html  nature.mk  quark.mk  ray.make  ray.mk  rayc.mk  sokol-c2.mk  sokol.mk
vimfiles/template/quark/: Makefile
vimfiles/template/rust/: Cargo.toml  Cargo_workspace.toml
vimfiles/template/rust/makepads/: app.rs
vimfiles/template/sh/: build.sh
vimfiles/template/virgil/: build.sh  makefile
(+31 files in other folders)
