[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[dependencies]
#bevy = { version = "1.0.0", features = ["dynamic_linking"] }
#makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }
#makepad-widgets = { path = "../../__makepad/widgets"}

[workspace]
resolver = "3" # edition 2024 default 3

[profile.dev]
opt-level = "s" # 又小运行也快,均匀优化
incremental = false # 以较小的步骤编译您的二进制文件。
debug = 0 # 不能调试,但可以大幅度缩减文件大小

[profile.release]
opt-level = 3 # 如果您更喜欢速度选择1~3
codegen-units = 1 # 允许 LLVM 执行更好的优化
lto = "thin" # 启用链接时优化 false或"off"/"thin"/true或"fat" 编译速度从左到右巨减
panic = "abort" # 通过禁用 panic 处理程序来提高性能
strip = true # 确保移除调试符号

[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[profile.small]
inherits = "release"
#debug = true
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true

